@@ -27,7 +27,7 @@ elfcmp: little usability tweak, name and index of differing section is printed.
 
 Version 0.110:
 
-libelf: fix a numbe rof problems with elf_update
+libelf: fix a number of problems with elf_update
 
 elfcmp: fix a few bugs.  Compare gaps.
 
